# rstd

./: .gitignore  Cargo.toml  README.md  asv.conf.json  pyproject.toml  rust-toolchain.toml
.github/workflows/: CI.yml
benchmarks/: math.py
python/rstd/: __init__.py
python/tests/: test_all.py  test_math.py
src/: factorial_algorithms.rs  lib.rs  math.rs  sieve.rs
src/rstd/: __init__.py
