[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rstd"
version = "0.1.0"
description = "Python standard library modules written in Rust"
readme = "README.md"
authors = [{ name = "Jonathan Lopez", email = "jonathanglopez@gmail.com" }]
requires-python = ">=3.13"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "memray>=1.15.0",
    "py-spy>=0.4.0",
    "pytest>=8.3.4",
    "pytest-memray>=1.7.0",
    "pytest-profiling>=1.8.1",
    "ruff>=0.9.3",
]
