[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rstd"
version = "0.1.0"
description = "Python standard library modules written in Rust"
readme = "README.md"
authors = [{ name = "Jonathan Lopez", email = "jonathanglopez@gmail.com" }]
requires-python = ">=3.13"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "asv>=0.6.4",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "snakeviz>=2.2.2",
]
